Removing min media query for navigation and adding some resets in mobile. This fixes the delay in rendering correctly on ie8 (dom ready + media query shim)

--- a/modules/header/navigation/navigation.scss
+++ b/modules/header/navigation/navigation.scss
@@ -16,83 +16,84 @@ $3dsize: 4px;
   position:relative;
   z-index: 10;
 
-  @media screen and (min-width: $screenSmall) {
-    .menu {
-      padding: 0;
-      position: relative;
+  .menu {
+    padding: 0;
+    position: relative;
 
-      &>li {
+    &>li {
+      @include inline-block();
+
+      &>a {
         @include inline-block();
+        position: relative;
+        color: #fff;
+        padding: 10px 15px;
+        padding: 10px 10px \9;
+        text-decoration: none;
+        font: {
+          weight: 700;
+        }
+      }
 
+      &:hover {
         &>a {
-          @include inline-block();
-          position: relative;
-          color: #fff;
-          padding: 10px 15px;
-          text-decoration: none;
-          font: {
-            weight: 700;
-          }
-        }
-
-        &:hover {
-          &>a {
-            background: #fff;
-            color: $colorGrey1;
-
-            &:before {
-              display: block;
-              content: '';
-              position: absolute; top: 0; left: 0;
-
-              border-style: solid;
-              border-width: #{$3dsize} #{$3dsize} 0 0;
-              border-color: $colorBlue1 transparent transparent transparent;
-            }
-            &:after {
-              display: block;
-              content: '';
-              position: absolute; top: 0; right: -#{$3dsize};
-
-              border-style: solid;
-              border-width: #{$3dsize} #{$3dsize} 0 0;
-              border-color: #fff transparent transparent transparent;
-            }
-          }
-        }
-
-        // Reset list styles for submenus
-        ul, li {
-          list-style: none;
-          margin: 0; padding: 0;
-        }
-
-        &:hover > ul {
-          left: -20px;
-        }
-
-        &>ul {
-          position: absolute;
           background: #fff;
-          padding: 15px 0 5px 0;
-          width: 550px;
-          margin-top: -3px;
-          left: -5000em;
+          color: $colorGrey1;
 
-          border-left: 1px solid darken(#fff, 10%);
-          border-right: 1px solid darken(#fff, 10%);
-          border-bottom: 1px solid darken(#fff, 10%);
+          &:before {
+            display: block;
+            content: '';
+            position: absolute; top: 0; left: 0;
 
-          &.hasthird {
-            width: 800px;
-            &>li {
-              @include column(4);
-            }
+            border-style: solid;
+            border-width: #{$3dsize} #{$3dsize} 0 0;
+            border-color: $colorBlue1 transparent transparent transparent;
           }
+          &:after {
+            display: block;
+            content: '';
+            position: absolute; top: 0; right: -#{$3dsize};
 
+            border-style: solid;
+            border-width: #{$3dsize} #{$3dsize} 0 0;
+            border-color: #fff transparent transparent transparent;
+          }
+        }
+      }
+
+      // Reset list styles for submenus
+      ul, li {
+        list-style: none;
+        margin: 0; padding: 0;
+      }
+
+      &:hover > ul {
+        left: -20px;
+      }
+
+      &>ul {
+        position: absolute;
+        background: #fff;
+        padding: 15px 0 5px 0;
+        width: 550px;
+        margin-top: -3px;
+        left: -5000em;
+
+        border-left: 1px solid darken(#fff, 10%);
+        border-right: 1px solid darken(#fff, 10%);
+        border-bottom: 1px solid darken(#fff, 10%);
+
+        &.hasthird {
+          width: 800px;
           &>li {
-            @include column(6);
+            @include column(4);
+          }
+        }
 
+        &>li {
+          @include column(6);
+
+          @media screen and (min-width: $screenSmall) {
             &.menu {
               li {
                 border-bottom: 1px solid lighten($colorGrey1, 65%);
@@ -112,71 +113,71 @@ $3dsize: 4px;
                 }
               }
             }
+          }
 
-            &.feed {
-              .title {
-                color: $colorBlue1;
-                font: {
-                  weight: 600;
+          &.feed {
+            .title {
+              color: $colorBlue1;
+              font: {
+                weight: 600;
+              }
+              margin: 0;
+            }
+
+            ul {
+              li {
+                border-top: 1px solid $colorGrey2;
+                &:first-child {
+                  border-top: none;
                 }
-                margin: 0;
+              }
+            }
+
+            a {
+              color: $colorGrey1;
+              text-decoration: none;
+              display: block;
+              padding: 20px 0;
+              border-bottom: 1px solid lighten($colorGrey1, 65%);
+              font: {
+                weight: 600;
               }
 
-              ul {
-                li {
-                  border-top: 1px solid $colorGrey2;
-                  &:first-child {
-                    border-top: none;
-                  }
-                }
-              }
-
-              a {
-                color: $colorGrey1;
-                text-decoration: none;
+              .date {
                 display: block;
-                padding: 20px 0;
-                border-bottom: 1px solid lighten($colorGrey1, 65%);
                 font: {
-                  weight: 600;
+                  size: .9em;
+                  weight: 400;
                 }
+                color: lighten($colorGrey1, 20%);
+              }
 
-                .date {
-                  display: block;
-                  font: {
-                    size: .9em;
-                    weight: 400;
-                  }
-                  color: lighten($colorGrey1, 20%);
-                }
-
-                &:last-child {
-                  border-bottom: none;
-                  padding-bottom: 10px;
-                }
+              &:last-child {
+                border-bottom: none;
+                padding-bottom: 10px;
               }
             }
           }
         }
+      }
 
-        &.social {
-          float: right;
-          margin-right: 12px;
+      &.social {
+        float: right;
+        margin-right: 12px;
 
-          a {
-            padding: 7px 3px;
-          }
+        a {
+          padding: 7px 3px;
+        }
 
-          &:hover {
-            &>a {
-              background: none;
+        &:hover {
+          &>a {
+            background: none;
 
-              &:before {
-                display: none;
-              }
-              &:after {
-                display: none;
-              }
+            &:before {
+              display: none;
+            }
+            &:after {
+              display: none;
             }
           }
         }
