--- a/modules/header/navigation/navigation_mobile.scss
+++ b/modules/header/navigation/navigation_mobile.scss
@@ -122,7 +122,17 @@ $width: 70%;
 
       &>li {
 
-        &>ul {
+        // Resets from desktop version
+        &:hover > ul {
+          left: 0;
+        }
+        &>a:hover {
+          &:before {
+            display: none;
+          }
+        }
+
+        &>ul, &>ul.hasthird {
           position: absolute;
           overflow-y: auto;
           top: 0; margin-left: -100%;
@@ -130,6 +140,9 @@ $width: 70%;
           height: 100%;
           background: #fff;
           z-index: 9001;
+          left: 0;
+          margin-top: 0;
+          border: none;
           @include moveLeft(margin-left);
 
           &>li {
@@ -137,6 +150,7 @@ $width: 70%;
 
             &.menu {
               display: block;
+              padding: 0;
             }
           }
 
